--- a/NODE/package.json
+++ b/NODE/package.json
@@ -3,6 +3,7 @@
     "events": "^3.3.0",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
+    "nodemailer": "^6.9.7",
     "os": "^0.1.2"
   }
 }
